--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-native": "0.69.4",
     "react-native-element-dropdown": "^2.2.0",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "^3.16.0",
+    "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
     "typescript": "^4.6.3"
   },
